added config.kubernetes.io/depends-on: /Namespace/gatekeeper-syste

--- a/kuku/gatekeeper.yaml
+++ b/kuku/gatekeeper.yaml
@@ -2543,6 +2543,8 @@ spec:
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    config.kubernetes.io/depends-on: /Namespace/gatekeeper-system
   labels:
     gatekeeper.sh/system: "yes"
   name: gatekeeper-mutating-webhook-configuration
@@ -2578,6 +2580,8 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
+  annotations:
+    config.kubernetes.io/depends-on: /Namespace/gatekeeper-system
   labels:
     gatekeeper.sh/system: "yes"
   name: gatekeeper-validating-webhook-configuration
