--- a/kuku/gatekeeper.yaml
+++ b/kuku/gatekeeper.yaml
@@ -2544,6 +2544,8 @@ spec:
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    config.kubernetes.io/depends-on: /Namespace/gatekeeper-system
   labels:
     gatekeeper.sh/system: "yes"
   name: gatekeeper-mutating-webhook-configuration
@@ -2579,6 +2581,8 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
+  annotations:
+    config.kubernetes.io/depends-on: /Namespace/gatekeeper-system
   labels:
     gatekeeper.sh/system: "yes"
   name: gatekeeper-validating-webhook-configuration
@@ -2648,4 +2652,3 @@ webhooks:
     - namespaces
   sideEffects: None
   timeoutSeconds: 3
-
